<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/result_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/_zero"
            android:textSize="50sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/first_row"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAc"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:text="@string/ac"
                android:textSize="25sp"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/buttonBackspace"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/bspace"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/slash"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_row"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSeven"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/_7"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/buttonEight"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/_8"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonNine"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/_9"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonX"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/x"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/third_row"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonFour"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/_4"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/buttonFive"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/_5"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonSix"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/_6"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/sub"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourth_row"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonOne"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/_1"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/buttonTwo"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/_2"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonThree"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/_3"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/plus"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifth_row"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/dot"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/buttonZero"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/_0"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonEquals"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/equals"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>